--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@
 # * https://github.com/supermarin/xcpretty#usage
 
 osx_image: xcode7.3
+rvm:
+  - 2.5
+  - 2.6
 language: objective-c
 cache: cocoapods
 podfile: Example/Podfile
