--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ before_install:
 - gem install cocoapods # Since Travis is not always on latest version
 - pod install --project-directory=Example
 script:
-- xcodebuild -workspace Example/CJCarouselView.xcworkspace -scheme CJCarouselView-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO
+- xcodebuild -workspace Example/CJCarouselView.xcworkspace -scheme CJCarouselView-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint
