--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,14 @@
 use_frameworks!
 
-platform :ios, '8.0'
+platform :ios, '11.0'
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '11.0'
+    end
+  end
+end
 
 target 'CJCarouselView_Example' do
   pod 'CJCarouselView', :path => '../'
@@ -10,6 +18,7 @@ target 'CJCarouselView_Example' do
   pod 'Masonry', :inhibit_warnings => true
   pod 'Toast', :inhibit_warnings => true
   pod 'FLEX', :inhibit_warnings => true
+  pod 'FTIndicator/FTProgressIndicator', :inhibit_warnings => true
   target 'CJCarouselView_Tests' do
     inherit! :search_paths
   end
